--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
 
     <!-- services -->
      <div class="services">
+        <div class="services_container">
         <div class="title">
             <p>SERVICES</p>
             <h2>Our core services</h2>
@@ -151,10 +152,9 @@
         <div class="btn">
             <a href="#" class="secondary_button">More Services</a>
         </div>
-        
+    </div>        
      </div>
     <!-- services end -->
-
 
 </body>
 </html>
